--- a/waitlistWelcome.html
+++ b/waitlistWelcome.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="x-apple-disable-message-reformatting">
-  <title> Luxim Verification E-mail </title>
+  <title> Luxim Welcome to Waitlist </title>
   <!--[if mso]>
   <noscript>
     <xml>
@@ -36,29 +36,37 @@
             </td>
           </tr>
           <tr>
-            <td style="padding:16px 30px 26px 30px;">
+            <td style="padding:8px 30px 26px 30px;">
               <table role="presentation" style="width:100%; border-collapse:collapse; border:0; border-spacing:0;">
-                <tr>
+                <!-- <tr>
                     <td align="center" style="padding:40px 0 30px 0;">
                       <img src="./Image.png" alt="" width="528" style="height:320px; display:block;" />
                     </td>
                   </tr>
-                <tr>
-                  <td style="padding:48px 0 14px 0;color:#153643;">
-                    <h1 style="margin:0 0 12px 0; font-size:36px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Hi Olivia, </h1>
+                <tr> -->
+                  <td style="padding:18px 0 14px 0;color:#153643;">
+                    <h1 style="margin:0 0 12px 0; font-size:26px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Dear [Name], </h1>
                   </td>
                 </tr>
                 <tr>
                     <td style="padding:0 0 0px 0;color:#153643;">
                       <p style="margin:0 0 12px 0; font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;">
-                          We’re glad to have you onboard! You’re already on your way to creating beautiful visual products. <br /> <br />
-                          Whether you’re here for your brand, for a cause, or just for fun — welcome! If there’s anything you need, we’ll be here every step of the way.
+                        Thank you for signing up for the Luxim Sustainable Fashion App waitlist! We are thrilled to have you on board and can’t wait to bring you the latest in sustainable fashion. 
+                        <br /> <br />
+                        At Luxim, we are committed to revolutionizing the fashion industry by promoting ethical and environmentally-friendly practices. Your decision to join our waitlist 
+                        shows your dedication to making a positive impact, and we truly appreciate your support.
+                        <br /> <br />
+                        You will be among the first to receive exclusive access, sneak peeks, and great opportunities when we launch. 
+                        <br /> <br />
+                        We cannot wait for you to join us on this journey towards a more sustainable future. 
+                        If you have any questions or suggestions, please feel free to reach out to us at,
+                        <a style="color: #E24311" href="mailto:hello@luximapp.com">hello@luximapp.com</a>.
                       </p>
                     </td>
                 </tr>
                 <tr>
                   <td style="padding:0 0 36px 0;color:#153643;">
-                    <p style=" font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Thanks,
+                    <p style=" font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> With gratitude,
                     <br /> Luxim Sustainable Fashion App Team.
                     </p>
                   </td>
@@ -72,7 +80,7 @@
                             This email was sent to <span style="color: #E24311"> olivia@untitledui.com</span>. If you'd rather not receive this kind of email, you can <a href="#" target="_blank" style="color: #E24311">unsubscribe</a> or <a href="#" target="_blank" style="color: #E24311">manage your email preferences</a>.
                           </p>
                           <p style="margin:0 0 12px 0;font-size:14px;line-height:24px;font-family:Arial,sans-serif;">
-                            © 2077 Luxim UI, 100 Smith Street, Melbourne VIC 3000
+                            © 2023 Luxim UI, 100 Smith Street, Melbourne VIC 3000
                           </p>
                         </td>
                       </tr>
@@ -101,27 +109,27 @@
                       <tr>
                         <!-- Twitter -->
                         <td style="padding:0 0 0 10px; width:38px;">
-                          <a target="_blank" href="https://twitter.com/LuximApp">
-                              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                  <path d="M6.2918 18.1251C13.8371 18.1251 17.9652 11.8724 17.9652 6.45167C17.9652 6.27589 17.9613 6.0962 17.9535 5.92042C18.7566 5.33967 19.4496 4.62033 20 3.7962C19.2521 4.12896 18.458 4.34627 17.6449 4.44074C18.5011 3.92755 19.1421 3.12135 19.4492 2.17159C18.6438 2.64892 17.763 2.98563 16.8445 3.1673C16.2257 2.50976 15.4075 2.07439 14.5164 1.9285C13.6253 1.78261 12.711 1.93433 11.9148 2.3602C11.1186 2.78607 10.4848 3.46238 10.1115 4.28455C9.73825 5.10672 9.64619 6.02897 9.84961 6.9087C8.21874 6.82686 6.62328 6.40321 5.16665 5.6652C3.71002 4.9272 2.42474 3.89132 1.39414 2.62472C0.870333 3.52782 0.710047 4.59649 0.945859 5.61353C1.18167 6.63057 1.79589 7.51966 2.66367 8.10011C2.01219 8.07943 1.37498 7.90402 0.804688 7.58839V7.63917C0.804104 8.58691 1.13175 9.50561 1.73192 10.2391C2.3321 10.9726 3.16777 11.4756 4.09687 11.6626C3.49338 11.8277 2.85999 11.8518 2.2457 11.7329C2.50788 12.548 3.01798 13.2609 3.70481 13.7721C4.39164 14.2833 5.22093 14.5673 6.07695 14.5845C4.62369 15.726 2.82848 16.3452 0.980469 16.3423C0.652739 16.3418 0.325333 16.3217 0 16.2821C1.87738 17.4866 4.06128 18.1263 6.2918 18.1251Z" fill="#98A2B3"/>
-                              </svg> 
-                          </a>
-                      </td>
-                      <!-- Facebook -->
-                      <td style="padding:0 0 0 10px;width:38px;">
-                        <a target="_blank" href="https://www.facebook.com/luximapp">
-                          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <g clip-path="url(#clip0_599_28639)">
-                                <path d="M20 10C20 4.47715 15.5229 0 10 0C4.47715 0 0 4.47715 0 10C0 14.9912 3.65684 19.1283 8.4375 19.8785V12.8906H5.89844V10H8.4375V7.79688C8.4375 5.29063 9.93047 3.90625 12.2146 3.90625C13.3084 3.90625 14.4531 4.10156 14.4531 4.10156V6.5625H13.1922C11.95 6.5625 11.5625 7.3334 11.5625 8.125V10H14.3359L13.8926 12.8906H11.5625V19.8785C16.3432 19.1283 20 14.9912 20 10Z" fill="#98A2B3"/>
-                              </g>
-                              <defs>
-                                  <clipPath id="clip0_599_28639">
-                                      <rect width="20" height="20" fill="white"/>
-                                  </clipPath>
-                              </defs>
-                          </svg>
-                          </a>
-                      </td>
+                            <a target="_blank" href="https://twitter.com/LuximApp">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.2918 18.1251C13.8371 18.1251 17.9652 11.8724 17.9652 6.45167C17.9652 6.27589 17.9613 6.0962 17.9535 5.92042C18.7566 5.33967 19.4496 4.62033 20 3.7962C19.2521 4.12896 18.458 4.34627 17.6449 4.44074C18.5011 3.92755 19.1421 3.12135 19.4492 2.17159C18.6438 2.64892 17.763 2.98563 16.8445 3.1673C16.2257 2.50976 15.4075 2.07439 14.5164 1.9285C13.6253 1.78261 12.711 1.93433 11.9148 2.3602C11.1186 2.78607 10.4848 3.46238 10.1115 4.28455C9.73825 5.10672 9.64619 6.02897 9.84961 6.9087C8.21874 6.82686 6.62328 6.40321 5.16665 5.6652C3.71002 4.9272 2.42474 3.89132 1.39414 2.62472C0.870333 3.52782 0.710047 4.59649 0.945859 5.61353C1.18167 6.63057 1.79589 7.51966 2.66367 8.10011C2.01219 8.07943 1.37498 7.90402 0.804688 7.58839V7.63917C0.804104 8.58691 1.13175 9.50561 1.73192 10.2391C2.3321 10.9726 3.16777 11.4756 4.09687 11.6626C3.49338 11.8277 2.85999 11.8518 2.2457 11.7329C2.50788 12.548 3.01798 13.2609 3.70481 13.7721C4.39164 14.2833 5.22093 14.5673 6.07695 14.5845C4.62369 15.726 2.82848 16.3452 0.980469 16.3423C0.652739 16.3418 0.325333 16.3217 0 16.2821C1.87738 17.4866 4.06128 18.1263 6.2918 18.1251Z" fill="#98A2B3"/>
+                                </svg> 
+                            </a>
+                        </td>
+                        <!-- Facebook -->
+                        <td style="padding:0 0 0 10px;width:38px;">
+                          <a target="_blank" href="https://www.facebook.com/luximapp">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_599_28639)">
+                                  <path d="M20 10C20 4.47715 15.5229 0 10 0C4.47715 0 0 4.47715 0 10C0 14.9912 3.65684 19.1283 8.4375 19.8785V12.8906H5.89844V10H8.4375V7.79688C8.4375 5.29063 9.93047 3.90625 12.2146 3.90625C13.3084 3.90625 14.4531 4.10156 14.4531 4.10156V6.5625H13.1922C11.95 6.5625 11.5625 7.3334 11.5625 8.125V10H14.3359L13.8926 12.8906H11.5625V19.8785C16.3432 19.1283 20 14.9912 20 10Z" fill="#98A2B3"/>
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_599_28639">
+                                        <rect width="20" height="20" fill="white"/>
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                            </a>
+                        </td>
                         <!-- Instagram -->
                         <td style="padding:0 0 0 10px;width:38px;">
                           <a target="_blank" href="https://www.instagram.com/luximapp">
