chore: modified onboarding email content

--- a/welcome.html
+++ b/welcome.html
@@ -24,7 +24,7 @@
       <td align="center" style="padding:0;">
         <table role="presentation" style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">
           <tr>
-            <td align="left" style="padding:24px;">
+            <td align="left" style="padding:0 24px 0;">
                 <svg width="132" height="41" viewBox="0 0 132 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.0382 0H0.893066V26.0172C0.893066 34.2774 7.7078 41 16.0813 41H28.2264V14.9829C28.2264 6.72258 21.4117 0 13.0382 0ZM24.5292 37.3528H16.0813C9.74438 37.3528 4.59025 32.2684 4.59025 26.0172V10.2191H4.63333C8.79267 10.2191 12.2314 13.3293 12.6857 17.3164V22.7834C12.6857 23.1465 12.7053 23.502 12.7366 23.8574V24.0081H12.7483C13.3711 29.8537 18.396 34.4242 24.4822 34.4242H24.5253V37.3528H24.5292ZM24.5292 30.777H24.4861C20.3268 30.777 16.8881 27.6669 16.4338 23.6797V18.2128C16.4338 17.8496 16.4142 17.4942 16.3829 17.1387V16.988H16.3711C15.7484 11.1425 10.7235 6.5719 4.63725 6.5719H4.59417V3.64333H13.0421C19.379 3.64333 24.5331 8.72776 24.5331 14.979V30.777H24.5292Z" fill="#D3DB22"/>
                     <path d="M41.1963 8.87314V31.7775H49.7467C50.493 31.7775 51.0964 31.5394 51.6363 31.071C52.1444 30.6343 52.4461 29.6895 52.5175 28.9433L52.6207 27.7921H53.0256L52.6525 32.1507H36.2264V31.7775H37.981V8.87314H36.2264V8.5H42.9509V8.87314H41.1963Z" fill="#102816" stroke="#102816" stroke-width="0.5" stroke-miterlimit="10"/>
@@ -36,30 +36,54 @@
             </td>
           </tr>
           <tr>
-            <td style="padding:16px 30px 26px 30px;">
+            <td style="padding:0 30px 26px 30px;">
               <table role="presentation" style="width:100%; border-collapse:collapse; border:0; border-spacing:0;">
                 <tr>
-                    <td align="center" style="padding:40px 0 30px 0;">
-                      <img src="./Image.png" alt="" width="528" style="height:320px; display:block;" />
-                    </td>
-                  </tr>
-                <tr>
                   <td style="padding:48px 0 14px 0;color:#153643;">
-                    <h1 style="margin:0 0 12px 0; font-size:36px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Hi Olivia, </h1>
+                    <h1 style="margin:0 0 12px 0; font-size:36px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;">Hello [User’s Name]</h1>
                   </td>
                 </tr>
                 <tr>
                     <td style="padding:0 0 0px 0;color:#153643;">
                       <p style="margin:0 0 12px 0; font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;">
-                          We’re glad to have you onboard! You’re already on your way to creating beautiful visual products. <br /> <br />
-                          Whether you’re here for your brand, for a cause, or just for fun — welcome! If there’s anything you need, we’ll be here every step of the way.
+                        Thank you for joining Luxim where traditional, circular fashion and economic opportunities intersect. We are thrilled to welcome you on board! <br /> <br />
+                        We started Luxim to celebrate our rich culture as Nigerians by creating an app to sell and buy your traditional clothes. Each traditional outfit carries a unique story, and at Luxim we are committed to preserving these narratives by connecting people across our country who value tradition and fashion.
                       </p>
                     </td>
                 </tr>
                 <tr>
+                  <td align="center" style="padding:40px 0 30px 0;">
+                    <img src="https://luxim-upload.s3.amazonaws.com/IMG_6417.jpg" alt="" width="528" style="display:block;" />
+                    <p style="font-style: italic; font-size: 12px; color: #666666;">Photo Courtesy of Luxim. All Rights Reserved to LuximApp Ltd.</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding:0 0 0px 0;color:#153643;">
+                    <p style="margin:0 0 12px 0; font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;">Beyond a marketplace, we are promoting circular fashion by extending the lifespan of our treasured wardrobes. Whether you are a designer, collector or owambe specialist– showcase your style and connect with customers to monetize your treasures on Luxim! 
+                    </p>
+                  </td>
+              </tr>
+              <tr>
+                <td align="center" style="padding:40px 0 30px 0;">
+                  <img src="https://luxim-upload.s3.amazonaws.com/Forest.jpeg" alt="" width="528" style="height:320px; display:block;" />
+                  <p style="font-style: italic; font-size: 12px; color: #666666;">Cross River, Nigeria. Photo from <a href="http://theguardian.ng/" style="color: #E24311">theguardian.ng</a>. LuximApp Ltd does not own any rights to this image</p>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding:0 0 0px 0;color:#153643;">
+                  <p style="margin:0 0 12px 0; font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;">Join us on this remarkable journey of preserving our traditions, helping our environment and unlocking economic opportunities, one traditional outfit at a time.</p>
+                </td>
+            </tr>
+            <tr>
+              <td style="padding:24px 0 0 0;color:#153643;">
+                <p style=" font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Happy selling and shopping! &#128717;
+                </p>
+              </td>
+            </tr>
+                <tr>
                   <td style="padding:0 0 36px 0;color:#153643;">
-                    <p style=" font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Thanks,
-                    <br /> Luxim Sustainable Fashion App Team.
+                    <p style=" font-size:16px; line-height:24px; color: #403F41; font-family:Arial,sans-serif;"> Fumnanya and Mary
+                    <br /> Co-Founders of Luxim
                     </p>
                   </td>
                 </tr>
@@ -69,10 +93,13 @@
                       <tr>
                         <td style="width:260px;padding:0;vertical-align:top;color:#153643;">
                           <p style="margin:0 0 12px 0;font-size:14px;line-height:24px;font-family:Arial,sans-serif;">
+                            For questions, email our team at <a href="mailto:hello@luximapp.com" style="color: #E24311">hello@luximapp.com</a>.
+                          </p>
+                          <p style="margin:0 0 12px 0;font-size:14px;line-height:24px;font-family:Arial,sans-serif;">
                             This email was sent to <span style="color: #E24311"> olivia@untitledui.com</span>. If you'd rather not receive this kind of email, you can <a href="#" target="_blank" style="color: #E24311">unsubscribe</a> or <a href="#" target="_blank" style="color: #E24311">manage your email preferences</a>.
                           </p>
                           <p style="margin:0 0 12px 0;font-size:14px;line-height:24px;font-family:Arial,sans-serif;">
-                            © 2077 Luxim UI, 100 Smith Street, Melbourne VIC 3000
+                            © 2023 Luxim UI, 100 Smith Street, Melbourne VIC 3000
                           </p>
                         </td>
                       </tr>
