chore: reduced first image height

--- a/welcome.html
+++ b/welcome.html
@@ -53,7 +53,9 @@
                 </tr>
                 <tr>
                   <td align="center" style="padding:40px 0 30px 0;">
-                    <img src="https://luxim-upload.s3.amazonaws.com/IMG_6417.jpg" alt="" width="528" style="display:block;" />
+                    <div style="width: 528px; height: 425px; overflow: hidden;">
+                      <img src="https://luxim-upload.s3.amazonaws.com/IMG_6417.jpg" alt="" width="528" style="display:block;" />
+                    </div>
                     <p style="font-style: italic; font-size: 12px; color: #666666;">Photo Courtesy of Luxim. All Rights Reserved to LuximApp Ltd.</p>
                   </td>
                 </tr>
