chore: fixed luxim address

--- a/welcome.html
+++ b/welcome.html
@@ -101,7 +101,7 @@
                             This email was sent to <span style="color: #E24311"> olivia@untitledui.com</span>. If you'd rather not receive this kind of email, you can <a href="#" target="_blank" style="color: #E24311">unsubscribe</a> or <a href="#" target="_blank" style="color: #E24311">manage your email preferences</a>.
                           </p>
                           <p style="margin:0 0 12px 0;font-size:14px;line-height:24px;font-family:Arial,sans-serif;">
-                            © 2023 Luxim UI, 100 Smith Street, Melbourne VIC 3000
+                            ©2023 Luxim, 32-34 Opebi Road, Ikeja, Lagos, Nigeria.
                           </p>
                         </td>
                       </tr>
